fixed spacing issue on portfolio page

--- a/src/App.css
+++ b/src/App.css
@@ -319,7 +319,7 @@ img {
     border-radius: 5px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 40px;
+    /* margin-top: 40px; */
     margin-bottom: 30px;
     padding: 10px;
 }
